--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>spring-messaging</artifactId>
 			<version>5.2.4.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+			<version>3.3.1.RELEASE</version>
+		</dependency>
+
 
 	</dependencies>
 
